Fixed Path not showing

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,3 @@ code {
 
 
 
-.test{
-  position: absolute
-}
