--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -7,5 +7,4 @@ body{
 
 
 .test{
-    position: absolute
   }
